<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ExoPlayerKotlinDemo</string>
    <string name="enter_url">Enter video URL</string>
    <string name="load_video">Load Video</string>

    <string name="error_invalid_url">Please enter a valid URL</string>
    <string name="error_playback">Error playing video</string>
    <string name="_00_00">00:00</string>
    <string name="dot"> • </string>
    <string name="live">Live</string>
    <string name="default_exoplayer">Default ExoPlayer</string>
    <string name="custom_control_exoplayer">Custom Control ExoPlayer</string>
    <string name="_0_25x">0.25x</string>
    <string name="_0_5x">0.5x</string>
    <string name="_0_75x">0.75x</string>
    <string name="normal">Normal</string>
    <string name="_1_25x">1.25x</string>
    <string name="_1_5x">1.5x</string>
    <string name="_2x">2x</string>
</resources>