<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AppEditText"
        android:layout_marginTop="@dimen/margin_medium"
        android:hint="@string/enter_url">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri|textMultiLine"
            android:lines="4"
            android:maxLines="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExoPlayer"
        style="@style/AppButton"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/default_exoplayer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCustomExoPlayer"
        style="@style/AppButton"
        android:text="@string/custom_control_exoplayer" />

</LinearLayout> 